--- a/src/components/postBoxStylesheet.css
+++ b/src/components/postBoxStylesheet.css
@@ -36,6 +36,20 @@
     text-align: center; 
     color: #FFFFFF;
 }
+.tweetButtonDisabled{
+    position: relative;
+    width: 68px;
+    height: 34px;
+    background: #6699cc;
+    border-radius: 4px;
+    border-color: #282c34;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center; 
+    color: #FFFFFF;
+}
 .container{
     display: flex;
     flex-direction: column;  
