server connection fully working

--- a/src/components/postBoxStylesheet.css
+++ b/src/components/postBoxStylesheet.css
@@ -55,3 +55,8 @@
     flex-direction: column;  
     align-items: center;
 }
+.postBoxWait{
+    background-image: url('http://www.broadwaybalancesamerica.com/images/ajax-loader.gif');
+    background-repeat: no-repeat;
+    background-position: center;
+}
