alert when no submitted username

--- a/src/components/navbarstylesheet.css
+++ b/src/components/navbarstylesheet.css
@@ -1,7 +1,7 @@
 .nav{
     display: flex;
     position: relative;
-    width: 1076px;
+    width: 70%;
     height: 58px;
     top: 0px;
     background: #343A40;
